--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,22 @@ body {
 	padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
 	padding-bottom: 40px;
 }
+
+.indScroll{
+	overflow: auto;
+	height: 100%;
+}
+
+#subbed{
+	border: solid black 1px;
+	border-radius: 20px;
+	padding: 15px;
+	background-color: rgba(0, 255, 0, .1);
+}
+
+#notSubbed{
+	border: solid black 1px;
+	border-radius: 20px;
+	padding: 15px;
+	background-color: rgba(255, 0, 0, .1);
+}
