--- a/css/main.css
+++ b/css/main.css
@@ -9,15 +9,37 @@ body {
 }
 
 #subbed{
-	border: solid black 1px;
-	border-radius: 20px;
-	padding: 15px;
+	border-radius: 5px;
 	background-color: rgba(0, 255, 0, .1);
 }
 
 #notSubbed{
-	border: solid black 1px;
-	border-radius: 20px;
-	padding: 15px;
+	border-radius: 5px;
 	background-color: rgba(255, 0, 0, .1);
 }
+
+#subbed .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
+border: 1px solid #d3d3d3;
+background: rgba(0, 255, 0, .1);
+color: #555555;
+}
+
+#subbed .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {
+border: 1px solid #aaaaaa;
+background: rgba(0, 255, 0, .01);
+color: #212121;
+}
+
+#subbed .ui-widget-content {
+border: 1px solid #aaaaaa;
+background: rgba(0, 255, 0, .01);
+color: #222222;
+}
+
+#subbed .ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus {
+border: 1px solid #999999;
+background: rgba(0, 255, 0, .2);
+color: #212121;
+}
+
+
