Style fix + starting to explore dragging

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,5 @@
-.body {
-	/*padding-top: 60px; 60px to make the container go all the way to the bottom of the topbar */
-<<<<<<< HEAD
-}
-=======
-	padding-bottom: 40px;
+body {
+	padding-top: 60px; /*60px to make the container go all the way to the bottom of the topbar */
 }
 
 .indScroll{
@@ -44,6 +40,3 @@ border: 1px solid #999999;
 background: rgba(0, 255, 0, .2);
 color: #212121;
 }
-
-
->>>>>>> drag-drop-layout
