--- a/css/main.css
+++ b/css/main.css
@@ -40,3 +40,28 @@ border: 1px solid #999999;
 background: rgba(0, 255, 0, .2);
 color: #212121;
 }
+
+
+#notSubbed .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
+border: 1px solid #d3d3d3;
+background: rgba(255, 0, 0, .1);
+color: #555555;
+}
+
+#notSubbed .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {
+border: 1px solid #aaaaaa;
+background: rgba(255, 0, 0, .01);
+color: #212121;
+}
+
+#notSubbed .ui-widget-content {
+border: 1px solid #aaaaaa;
+background: rgba(255, 0, 0, .01);
+color: #222222;
+}
+
+#notSubbed .ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus {
+border: 1px solid #999999;
+background: rgba(255, 0, 0, .2);
+color: #212121;
+}
