Trying to get the login modal to work

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,12 @@ body {
 .indScroll{
 	overflow: auto;
 	height: 100%;
+	position : absolute;
+}
+
+.rightBar{
+	left: 32%;
+	width: 65% !important;
 }
 
 #subbed{
