Still changing colors
Messed up a bit before; now fixed

--- a/css/main.css
+++ b/css/main.css
@@ -29,13 +29,13 @@ body {
 
 #subbed .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
 border: 1px solid #d3d3d3;
-background: rgba(0, 255, 0, .1);
-color: #555555;
+background: rgba(59, 224, 132, .84);
+color: #FFFFFF;
 }
 
 #subbed .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {
 border: 1px solid #aaaaaa;
-background: rgba(59, 224, 132, .84);
+background: rgba(120, 231, 67, .95);
 color: #FFFFFF;
 }
 
@@ -47,8 +47,8 @@ color: #FFFFFF;
 
 #subbed .ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus {
 border: 1px solid #999999;
-background: rgba(0, 255, 0, .2);
-color: #212121;
+background: rgba(255, 255, 255, 1);
+color: #000000;
 }
 
 
